# knowledge-weaver

./: CODE-REVIEW-ANALYSIS.md  README.md  pyproject.toml
deploy/: crontab-entry  install.sh  openclaw-mcp-config.json
docs/: KW_MEMORY_FILE_SPEC.md
fixtures/: sample_2026-05-22.md  sample_2026-05-23.md  sample_2026-05-24.md
scripts/: clean_and_rescore.py  re_embed.py
src/knowledge_weaver/: __init__.py  __main__.py  db.py  embedder.py  extractor.py  linker.py  parser.py  pipeline.py  registry.py  scorer.py  server.py  tools.py
src/knowledge_weaver.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_db.py  test_embedder.py  test_extractor.py  test_integration.py  test_linker.py  test_parser.py  test_pipeline.py  test_recurrence_gate.py  test_registry.py  test_scorer.py  test_server.py  test_tools.py
